...
            fetcher.FetchInitialData()
        }
        
        let user = CoreDataHelper.getUserData()
        if user != nil && user?.name.count ?? 0 > 0 {
            let mainStoryboard: UIStoryboard = UIStoryboard(name: "Janne", bundle: nil)
            let viewController = mainStoryboard.instantiateViewController(withIdentifier: "overviewView")
            self.window!.rootViewController = viewController
        } else {
            let mainStoryboard: UIStoryboard = UIStoryboard(name: "Mikko", bundle: nil)
            let viewController = mainStoryboard.instantiateViewController(withIdentifier: "onboardingView")
            self.window!.rootViewController = viewController
        }
...
