...
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <connections>
                                    <outlet property="dataSource" destination="G7a-NR-4ad" id="P8y-Iw-CbG"/>
                                    <outlet property="delegate" destination="G7a-NR-4ad" id="Exb-DT-RWd"/>
                                </connections>
                            </tableView>
                            <searchBar contentMode="redraw" placeholder="search by subject" showsCancelButton="YES" translatesAutoresizingMaskIntoConstraints="NO" id="S5v-Rz-SEB">
                                <rect key="frame" x="0.0" y="60" width="375" height="56"/>
                                <color key="backgroundColor" name="Background"/>
                                <color key="barTintColor" name="Accent"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="G7a-NR-4ad" id="KQY-Ef-Zfi"/>
...
