...
                                                </prototypes>
                                                <connections>
                                                    <outlet property="dataSource" destination="zXX-Qc-GOl" id="nCM-qz-eTu"/>
                                                    <outlet property="delegate" destination="zXX-Qc-GOl" id="yzC-Yc-rek"/>
                                                </connections>
                                            </tableView>
                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrow" translatesAutoresizingMaskIntoConstraints="NO" id="wop-bj-4p3" userLabel="ImageViewArrow">
                                                <rect key="frame" x="167.5" y="834" width="40" height="40"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="40" id="dEG-rl-XFQ"/>
                                                    <constraint firstAttribute="height" constant="40" id="hY2-2P-X8h"/>
                                                </constraints>
                                            </imageView>
...
